Fixes cell collapse when filled with zeros

--- a/styles.css
+++ b/styles.css
@@ -315,7 +315,7 @@ code:hover {
 }
 
 .ptxs {
-	padding-top: .25rem;}
+	padding-top: .35rem;}
 
 .pts {
 	padding-top: .5rem;}
@@ -333,7 +333,7 @@ code:hover {
 	padding-top: 2rem;}
 
 .pbxs {
-  padding-bottom: .25rem;}
+  padding-bottom: .35rem;}
 
 .pbs {
   padding-bottom: .5rem;}
